Source/WebCore/animation/DeclarativeAnimation.h
@@ -42,6 +42,7 @@ public:
 
     bool isDeclarativeAnimation() const final { return true; }
 
+    Element& target() const { return m_target; }
     const Animation& backingAnimation() const { return m_backingAnimation; }
     void setBackingAnimation(const Animation&);
     void invalidateDOMEvents(Seconds elapsedTime = 0_s);
